--- a/client/tempest/app/globals.css
+++ b/client/tempest/app/globals.css
@@ -72,3 +72,25 @@ body {
 .like-button.liked {
   color: #ff4d4f;
 }
+
+*::-webkit-scrollbar {
+  width: 0.4rem;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: lightgray;
+  border-radius: 0.7rem;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: white;
+  border-radius: 0.7rem;
+}
+
+/* Browsers without `::-webkit-scrollbar-*` support */
+@supports not selector(::-webkit-scrollbar) {
+  html {
+    scrollbar-width: thin;
+    scrollbar-color: #6d7c77 #cfd7c7;
+  }
+}
