--- a/client/tempest/app/globals.css
+++ b/client/tempest/app/globals.css
@@ -5,6 +5,12 @@
   --foreground: #171717;
   --primary: #7289da;
   --secondary: #f7f7f9;
+
+  --section-max-width: 1440px;
+  --section-min-height: 375px;
+  --section-padding-x: 40;
+
+  --main-content-y-gap: 1rem;
 }
 
 @theme inline {
@@ -28,8 +34,22 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  /* font-family: Arial, Helvetica, sans-serif; */
   font-family: var(--font-sans), Arial, Helvetica, sans-serif;
+}
+
+.ui-container {
+  box-sizing: border-box;
+  margin: 0 auto;
+  width: 100%;
+  max-width: var(--section-max-width);
+  padding-inline: clamp(1rem, 4vw, 2rem);
+  padding-block: clamp(0.1rem, 4vw, 1rem);
+}
+
+.ui-main-content {
+  display: flex;
+  flex-direction: column;
+  gap: var(--main-content-y-gap);
 }
 
 .ant-modal {
